Skip Navigation 추가

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   </head>
 
   <body>
+    <div class="skip-navigation">
+      <a href="#user-email">본문 바로가기</a>
+    </div>
     <div class="container">
       <header class="header">
         <h1 class="logo">
